--- a/priv/lib/css/style.css
+++ b/priv/lib/css/style.css
@@ -1090,7 +1090,8 @@ body.color--flagBrown .c-btn-add-event path {
   }
 }
 
-body .c-calendar:last-of-type .c-calendar__divider__next {
+body .c-calendar:first-of-type .c-calendar__divider__nav.-prev,
+body .c-calendar:last-of-type .c-calendar__divider__nav.-next {
   display: none;
 }
 
@@ -1098,6 +1099,7 @@ body .c-calendar:last-of-type .c-calendar__divider__next {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  gap: 1em;
   width: calc(100% + 0.2em);
   margin: 0 0 0.5em;
   padding: 0 0.5em 0 0.2em;
@@ -1131,7 +1133,7 @@ body .c-calendar:last-of-type .c-calendar__divider__next {
   }
 }
 
-.c-calendar__divider__next {
+.c-calendar__divider__nav {
   display: flex;
   flex-flow: column;
   align-items: center;
@@ -1144,20 +1146,31 @@ body .c-calendar:last-of-type .c-calendar__divider__next {
   text-transform: lowercase;
   transition: opacity 0.3s;
 }
+.c-calendar__divider__nav:has(+ .c-calendar__divider__nav) {
+  margin-left: auto;
+}
 @supports (container-type: scroll-state) {
-  .c-calendar__divider__next {
+  .c-calendar__divider__nav {
     opacity: 1;
   }
 }
-.c-calendar__divider__next svg {
+.c-calendar__divider__nav svg {
   width: 16px;
   height: 16px;
   fill: var(--darkTheme);
   rotate: 180deg;
 }
 @supports not (rotate: 45deg) {
-  .c-calendar__divider__next svg {
+  .c-calendar__divider__nav svg {
     transform: rotate(180deg);
+  }
+}
+.c-calendar__divider__nav.-prev svg {
+  rotate: 0deg;
+}
+@supports not (rotate: 45deg) {
+  .c-calendar__divider__nav.-prev svg {
+    transform: rotate(0deg);
   }
 }
 
