--- a/priv/lib/css/style.css
+++ b/priv/lib/css/style.css
@@ -1201,6 +1201,10 @@ body .c-calendar:last-of-type .c-calendar__divider__nav.-next {
   }
 }
 
+.c-calendar__first {
+  scroll-margin-top: 100px;
+}
+
 @supports not (inset: 0) {
   .c-calendar-item {
     margin-bottom: 1em;
