--- a/priv/lib-src/_components.calendar.scss
+++ b/priv/lib-src/_components.calendar.scss
@@ -122,6 +122,10 @@ body .c-calendar:last-of-type .c-calendar__divider__nav.-next {
 
     &.-featured {
         font-size: 1.4em;
+
+        h3 {
+            font-size: 1.5em;
+        }
     }
 
     @starting-style {
