--- a/priv/lib-src/_components.share-event.scss
+++ b/priv/lib-src/_components.share-event.scss
@@ -10,7 +10,7 @@
     color: var(--darkTheme);
 
     svg {
-        height: 1.6rem;
+        height: 1em;
     }
 
     .icon-bookmark__fill {
@@ -54,6 +54,10 @@
     flex-flow: column wrap;
     gap: 0.25em;
     align-items: start;
+
+    .c-btn-share-event {
+        padding-top: 0.2em;
+    }
 }
 
 [popover] {
@@ -77,5 +81,20 @@
     .c-share-event,
     .c-share-event-toggle {
         display: none;
+    }
+}
+
+.c-share-event__divider {
+    width: 100%;
+    text-align: left;
+
+    &:before {
+        content:'';
+        display: block;
+        width: 100%;
+        height: 1px;
+        margin-bottom: 0.2em;
+        border-top: 1px solid var(--darkTheme);
+        opacity: 0.3;
     }
 }
