--- a/priv/lib/css/style.css
+++ b/priv/lib/css/style.css
@@ -942,15 +942,16 @@ button {
 
 .c-btn-primary, .btn-primary,
 .btn-success {
-  background: var(--primaryColor);
-  color: #fff;
+  background: var(--darkTheme);
+  color: var(--typographyColor);
 }
 .c-btn-primary:hover, .btn-primary:hover,
 .btn-success:hover, .c-btn-primary:active, .btn-primary:active,
 .btn-success:active, .c-btn-primary:focus, .btn-primary:focus,
 .btn-success:focus, .c-btn-primary:focus:active {
   text-decoration: none;
-  color: var(--primaryColor);
+  color: var(--typographyColor);
+  background: var(--primaryColor);
   border-color: var(--primaryColor);
 }
 
@@ -1350,6 +1351,15 @@ body .c-calendar:last-of-type .c-calendar__divider__nav.-next {
   padding: 1em;
   background: var(--lightTheme);
   color: light-dark(var(--darkTheme), var(--typographyColor));
+}
+
+.c-calendar-item.-support {
+  display: flex;
+  flex-flow: column wrap;
+  justify-content: center;
+  align-items: center;
+  background: var(--lightTheme);
+  text-align: center;
 }
 
 .c-filters {
