--- a/priv/lib-src/_components.calendar.scss
+++ b/priv/lib-src/_components.calendar.scss
@@ -246,6 +246,7 @@ body .c-calendar:last-of-type .c-calendar__divider__nav.-next {
         background: white;
         border: 3px solid var(--darkTheme); 
         color: #242424;
+        font-size: 1.8rem;
 
         h3 {
             color: var(--darkTheme);
