--- a/priv/lib-src/_components.buttons.scss
+++ b/priv/lib-src/_components.buttons.scss
@@ -59,6 +59,17 @@ button {
         transition: left 0.3s ease-out;
     }
 
+    &.-icon-external {
+        &:after {
+            content: '';
+            width: 0.6em;
+            height: 0.6em;
+            transform: translate(40%, -70%);
+            background: url("data:image/svg+xml,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%20512%20512%22%3E%3Cpath%20d%3D%22M352%200c-12.9%200-24.6%207.8-29.6%2019.8s-2.2%2025.7%206.9%2034.9L370.7%2096%20201.4%20265.4c-12.5%2012.5-12.5%2032.8%200%2045.3s32.8%2012.5%2045.3%200L416%20141.3l41.4%2041.4c9.2%209.2%2022.9%2011.9%2034.9%206.9s19.8-16.6%2019.8-29.6V32c0-17.7-14.3-32-32-32H352zM80%2032C35.8%2032%200%2067.8%200%20112v320c0%2044.2%2035.8%2080%2080%2080h320c44.2%200%2080-35.8%2080-80V320c0-17.7-14.3-32-32-32s-32%2014.3-32%2032v112c0%208.8-7.2%2016-16%2016H80c-8.8%200-16-7.2-16-16V112c0-8.8%207.2-16%2016-16h112c17.7%200%2032-14.3%2032-32s-14.3-32-32-32H80z%22%2F%3E%3C%2Fsvg%3E");
+            background-size: contain;
+        }   
+    }
+
     @include setInteractive {
         text-decoration: none;
         border: 2px solid var(--typographyColor);
