--- a/priv/lib/css/style.css
+++ b/priv/lib/css/style.css
@@ -593,8 +593,7 @@ a[target=_blank]:not(.c-btn):not(.btn):after {
   display: inline-flex;
   width: 0.5em;
   height: 0.5em;
-  position: relative;
-  right: -2px;
+  transform: translate(50%, 0%);
   mask: url("/lib/images/icon-external.svg") no-repeat 50% 50%;
   background-color: currentColor;
 }
