--- a/priv/lib-src/_components.calendar.scss
+++ b/priv/lib-src/_components.calendar.scss
@@ -325,6 +325,7 @@ body .c-calendar:last-of-type .c-calendar__divider__nav.-next {
     flex-flow: column wrap;
     justify-content: center;
     align-items: center;
+    min-height: 9em;
     background: var(--lightTheme);
     text-align: center;   
 }
