--- a/priv/lib/css/style.css
+++ b/priv/lib/css/style.css
@@ -889,11 +889,11 @@ button {
   justify-content: center;
   min-height: 4.5rem;
   padding: 0 1.3em;
-  background: var(--typographyColor);
+  background: var(--primaryColor);
   border: 2px solid transparent;
   text-decoration: none;
   font-family: var(--primaryFont);
-  color: #fff;
+  color: #242424;
   line-height: 1;
   cursor: pointer;
   transition: color 0.2s, border 0.2s, background 0.3s ease-out;
@@ -979,6 +979,16 @@ button {
   background: var(--primaryColor);
   border-color: var(--darkTheme);
   transform: scale(1.1);
+}
+
+.c-btn-tickets {
+  background: transparent;
+  color: #242424;
+  border-color: currentColor;
+}
+.c-btn-tickets:hover, .c-btn-tickets:active, .c-btn-tickets:focus, .c-btn-tickets:focus:active {
+  color: #242424;
+  border-color: var(--primaryColor);
 }
 
 body.color--flagBrown .c-btn-primary, body.color--flagBrown .btn-primary,
