Add updated date on homepage, change position of keywords on detail page, add titles in frontend edit

--- a/priv/lib-src/_components.buttons.scss
+++ b/priv/lib-src/_components.buttons.scss
@@ -133,6 +133,10 @@ body.color--flagBlack {
     @extend .c-btn;
 }
 
+.modal-footer .btn {
+    border-width: 2px;
+}
+
 .c-btn-admin-edit {
     padding: 1rem 2rem; 
     background: #ccc;
