--- a/priv/lib-src/_components.calendar.scss
+++ b/priv/lib-src/_components.calendar.scss
@@ -329,3 +329,14 @@ body .c-calendar:last-of-type .c-calendar__divider__nav.-next {
     background: var(--lightTheme);
     text-align: center;   
 }
+
+.c-calendar-modified {
+    padding: 0 2.5% 0;
+    font-size: 0.9em;
+    opacity: 0.8;
+    color: var(--darkTheme);
+
+    @include breakpoint($mediumBreakpoint) {
+        padding: 0 4rem 0;
+    }
+}
