--- a/priv/lib-src/_elements.body.scss
+++ b/priv/lib-src/_elements.body.scss
@@ -85,6 +85,7 @@ body {
 main {
     flex: 1 0 auto;
     padding: 0 2.5% 2rem;
+    margin-bottom: var(--mainMargin);
     
     @include breakpoint($mediumBreakpoint) {
         padding: 0 4rem 4rem;
