--- a/priv/lib-src/_components.keyword-list.scss
+++ b/priv/lib-src/_components.keyword-list.scss
@@ -4,6 +4,10 @@
     flex-flow: row wrap;
     gap: 0.5rem;
     font-size: 0.7em;
+
+    + a {
+        margin-top: 1em;
+    }
 }
 
 .c-keyword-list + address {
