#9 WIP city filter

--- a/priv/lib-src/_components.filters.scss
+++ b/priv/lib-src/_components.filters.scss
@@ -92,6 +92,7 @@
 }
 
 .c-filters__remove {
+    align-self: end;
     color: light-dark(var(--darkTheme), var(--typographyColor));
     transition: background 0.3s ease-out, color 0.3s ease-out;
 
