#27: Print preview details

--- a/priv/lib-src/_template.print.scss
+++ b/priv/lib-src/_template.print.scss
@@ -1,11 +1,15 @@
 @media print {
     @page {
         size: auto;   /* auto is the initial value */
-        margin: 2em;  /* this affects the margin in the printer settings */
+        margin: 3em;  /* this affects the margin in the printer settings */
     }
 
     body {
         font-size: 16px;
+    }
+
+    main {
+        padding: 0;
     }
 
     .c-btns-admin,
@@ -52,7 +56,7 @@
         column-gap: 2em;
 
         > li {
-            width: 45%;
+            width: calc(50% - 1em);
             padding-bottom: 0.5em;
             border-bottom: 5px solid var(--darkTheme);
         }
