#27: Print preview remove text decoration from links

--- a/priv/lib-src/_template.print.scss
+++ b/priv/lib-src/_template.print.scss
@@ -12,6 +12,10 @@
         padding: 0;
     }
 
+    a {
+        text-decoration: none;
+    }
+
     .c-btns-admin,
     .c-calender-item__edit,
     .c-share-event-toggle,
