--- a/priv/lib-src/_template.print.scss
+++ b/priv/lib-src/_template.print.scss
@@ -65,4 +65,19 @@
             border-bottom: 5px solid var(--darkTheme);
         }
     }
+
+    h1,h2 {
+        text-align: center;
+    }
+
+    h2 span {
+        font-size: 0.8em;
+    }
+
+    .p-footer {
+        padding: 1em;
+        position: relative;
+        background: var(--lightTheme);
+        text-align: center;
+    }
 }
