--- a/priv/lib-src/_template.print.scss
+++ b/priv/lib-src/_template.print.scss
@@ -14,6 +14,10 @@
 
     a {
         text-decoration: none;
+
+        &:before {
+            display: none;
+        }
     }
 
     .c-btns-admin,
