--- a/priv/lib-src/_template.print.scss
+++ b/priv/lib-src/_template.print.scss
@@ -70,18 +70,38 @@
         }
     }
 
-    h1,h2 {
-        text-align: center;
+    h2 {
+        margin-bottom: 0;
     }
 
-    h2 span {
-        font-size: 0.8em;
+    .p-summary {
+        margin: 0 0 2em;
+        font-size: 1.2em;
     }
 
     .p-footer {
         padding: 1em;
         position: relative;
         background: var(--lightTheme);
-        text-align: center;
+        // text-wrap: balance;
+    }
+
+    .p-cutouts {
+        writing-mode: vertical-rl;
+        text-orientation: mixed;
+        white-space: nowrap;
+        list-style: none;
+        font-weight: bold;
+        font-size: 1.3em;
+
+        li {
+            border-left: 5px dotted currentColor;
+            border-top: 2px solid currentColor;
+            padding: 2em;
+        }
+
+        li:first-child {
+            border-right: 5px dotted currentColor;
+        }
     }
 }
